--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,8 @@ doctype html
 html
   head
     title= title
+    link(href="/favicon.ico", rel="icon", type="image/x-icon")
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
+    script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.min.js')
