--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,5 +1,5 @@
 doctype html
-html
+html(ng-app="hypeApp")
   head
     title= title
     link(href="/favicon.ico", rel="icon", type="image/x-icon")
@@ -7,3 +7,6 @@ html
   body
     block content
     script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.min.js')
+    script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular-route.min.js')
+    script(src='/javascripts/app.js')
+    script(src='/javascripts/controllers/video-list-controller.js')
