--- a/views/video.jade
+++ b/views/video.jade
@@ -1,14 +1,6 @@
-extends layout
 
-block content
-  div(style='margin-top:200px;')
-    h1= title
-    button(id="button")
-      span Capture to img
-    video(id="video", width='100%', controls)
-      source(src='/warcraft.mp4', type='video/mp4')
-      span Your browser does not support HTML5 Video
-    canvas(id="canvas", style="display:none;")
-    img(id="img")
-    script(type='text/javascript', src="/javascripts/socket.io.js")
-    script(type='text/javascript', src="/javascripts/getFrame.js")
+#title My Tv
+
+video(id="video", width='100%', controls, crossorigin='anonymous', video-time-update)
+    source(src='{{trustSrc(currentvideo)}}', type='video/mp4')
+    span Your browser does not support HTML5 Video
