--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,17 +1,19 @@
 doctype html
 html(ng-app='hypeApp')
   head
-    title= title
+    title= Hype
     link(href='/favicon.ico', rel='icon', type='image/x-icon')
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     #nav(scroll-collapse, ng-class="{collapse:boolChangeClass}")
        #left-nav
          img#menu(src='/images/menu.png')
-         span#title My TV
     block content
-    script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.min.js')
-    script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular-route.min.js')
+    script(src="/socket.io/socket.io.js")
+    script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.js')
+    script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular-route.js')
     script(src='/javascripts/app.js')
     script(src='/javascripts/controllers/video-list-controller.js')
+    script(src='/javascripts/controllers/video-controller.js')
     script(src='/javascripts/directives/scroll-collapse-directive.js')
+    script(src='/javascripts/directives/video-time-update-directive.js')
