--- a/views/video-list.jade
+++ b/views/video-list.jade
@@ -1,9 +1,13 @@
+#title My Hypes
+
 #search-nav
     img#search(src='/images/search.png', ng-click='showSearch = ! showSearch')
     input#searchbox(ng-model='query', ng-show='showSearch', placeholder='Search for your movie or tv')
+    
 #banner-wrapper
     #banner-overlay(scroll-fade)
     #banner(style='background-image:url({{videos[0].bannerImage}})')
+    
 #container-wrapper(scroll-littlebit)
     ul#container-videos
         li(ng-repeat="video in videos | filter:query | orderBy:orderProp")
