--- a/views/video.jade
+++ b/views/video.jade
@@ -1,6 +1,6 @@
 
 #title My Tv
 
-video(id="video", width='100%', controls, crossorigin='anonymous', video-time-update)
+video(id="video", width='100%', autoplay, controls, crossorigin='anonymous', video-time-update, video-fullscreen)
     source(src='{{trustSrc(currentvideo)}}', type='video/mp4')
     span Your browser does not support HTML5 Video
