Create doodle page

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -15,5 +15,6 @@ html(ng-app='hypeApp')
     script(src='/javascripts/app.js')
     script(src='/javascripts/controllers/video-list-controller.js')
     script(src='/javascripts/controllers/video-controller.js')
+    script(src='/javascripts/controllers/doodle-controller.js')
     script(src='/javascripts/directives/scroll-directive.js')
     script(src='/javascripts/directives/video-directive.js')
