Adds Doodle page.

--- a/views/doodle.jade
+++ b/views/doodle.jade
@@ -1,2 +1,12 @@
 #title Doodle Moment
+#colors
+    #red.color
+    #green.color
+    #yellow.color
+    #blue.color
+#brushes
+    #small.brush
+    #medium.brush
+    #large.brush
+canvas#can(doodle-fullscreen) 
 
