--- a/views/doodle.jade
+++ b/views/doodle.jade
@@ -16,9 +16,10 @@ input#text
     span x
 
 #brushes
-    #small.brush(ng-click="brushBtn($this)")
-    #medium.brush(ng-click="brushBtn($this)")
-    #large.brush(ng-click="brushBtn($this)")
+    #small.brush(ng-click="brushBtn(small)")
+    #medium.brush(ng-click="brushBtn(medium)")
+    #large.brush(ng-click="brushBtn(large)")
     #text-btn(ng-click="textBtn()")
+        img(src="../../images/textcursor.svg")    
 
 
