--- a/views/layout.jade
+++ b/views/layout.jade
@@ -12,6 +12,7 @@ html(ng-app='hypeApp')
     div#shelf-wrapper(ng-class='{expanded:showShelf}', ng-click='showShelf = ! showShelf')
         ul#shelf
             li: a.menutitle(href='#/') LOGO
+            li: a(href='#/memes') 🌀 Recent
             li: a(href='#/tv') 📺 Tv
             li: a(href='#/videos') ⚛ Hypes
     block content
@@ -19,6 +20,8 @@ html(ng-app='hypeApp')
     script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.js')
     script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular-route.js')
     script(src='/javascripts/app.js')
+    script(src='/javascripts/controllers/meme-controller.js')
+    script(src='/javascripts/controllers/meme-list-controller.js')
     script(src='/javascripts/controllers/index-controller.js')
     script(src='/javascripts/controllers/video-list-controller.js')
     script(src='/javascripts/controllers/video-controller.js')
