--- a/views/meme.jade
+++ b/views/meme.jade
@@ -1,1 +1,5 @@
 #title Share Meme
+
+#container-meme
+    a(href='#/memes') Go Back
+    .meme-image(style='background-image:url({{meme.MemeUrl}})')
