--- a/views/meme-list.jade
+++ b/views/meme-list.jade
@@ -1,1 +1,6 @@
 #title Recent
+
+ul#container-memes
+    li(ng-repeat="meme in memes")
+        a.meme-image(style='background-image:url({{meme.MemeUrl}})', href='#/memes/{{meme._id}}')
+        
