Hook up the doodle

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -120,6 +120,7 @@ body {
     height: inherit;
 }
 .hype-image {
+    display: block;
     width: 250px;
     height: 150px;
     background-size: cover;
