fixing red in doodle

--- a/views/doodle.jade
+++ b/views/doodle.jade
@@ -1,7 +1,7 @@
 #title Doodle Moment
 
 #colors
-    #red.color(doodle)
+    #red.color(doodle-color)
     #orange.color(doodle-color)
     #yellow.color(doodle-color)
     #green.color(doodle-color)
