Add Emoji Support

--- a/views/video.jade
+++ b/views/video.jade
@@ -2,3 +2,5 @@
 #title My Tv
 
 video(id="video", width='100%', autoplay, controls, crossorigin='anonymous', video-time-update, video-fullscreen, src='{{trustSrc(currentvideo)}}')
+
+#emoji(ng-show='emojiVisible') {{emoji}}
