--- a/views/video-list.jade
+++ b/views/video-list.jade
@@ -20,5 +20,5 @@
                 .container-frames-wrapper
                     ul.container-frames(style="width: {{ 270 * video.hypes.length}}px")
                         li(ng-repeat="hype in video.hypes")
-                            a.hype-image(style='background-image:url({{hype.thumbnail}})', href='#/doodle?thumbnail={{hype.thumbnail}}')
+                            a.hype-image(style='background-image:url({{hype.thumbnail}})', href='/doodle?thumbnail={{hype.thumbnail}}')
                             .hype-meta {{hype.timemark}}
