update twitter metadata

--- a/views/memepage.jade
+++ b/views/memepage.jade
@@ -2,10 +2,10 @@ extends layout
 
 block header
     meta(name="twitter:card", content="photo")
-    meta(name="twitter:site", content="@nbcu")
-    meta(name="twitter:title", content="Mountain sunset")
-    meta(name="twitter:image", content="http://farm8.staticflickr.com/7334/11858349453_e3f18e5881_z.jpg")
-    meta(name="twitter:url", content="https://www.flickr.com/photos/reza-sina/11858349453/")
+    meta(name="twitter:site", content="@nbcuniversal")
+    meta(name="twitter:title", content="My hyped meme")
+    meta(name="twitter:image", content="#{imageUrl}")
+    meta(name="twitter:url", content="#{fullUrl}")
 
 block content
   #main(ng-view)
