--- a/views/meme.jade
+++ b/views/meme.jade
@@ -1,9 +1,13 @@
 #title Share Meme
 
 #container-meme
-    a(href='/memes') Go Back
+    a(href='/memes') 
+        img.icon(src='/images/goback.png')
+        | Go Back
     .meme-image(style='background-image:url({{meme.MemeUrl}})')
-    a.twitter-share-button(href="https://twitter.com/share",data-url="{{tweetUrl}}") Tweet
+    a.twitter-share-button(href="https://twitter.com/share",data-url="{{tweetUrl}}")
+        img.icon(src='/images/TwitterLogo.png')
+        |Tweet
     
 script(type='text/javascript').
     !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
