--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -266,11 +266,10 @@ video {
 
 .meme-image {
     display: block;
-    height: 300px;
+    height: 500px;
     background-repeat: no-repeat;
     background-position: top left;
-    background-size: cover;
-    background-color: #333;
+    background-size: contain;
 }
 
 div#emoji {
