--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -266,10 +266,11 @@ video {
 
 .meme-image {
     display: block;
-    height: 500px;
+    height: 300px;
     background-repeat: no-repeat;
     background-position: top left;
-    background-size: contain;
+    background-size: cover;
+    background-color: #333;
 }
 
 div#emoji {
