--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -114,6 +114,7 @@ a{
     overflow-x: auto;
     overflow-y: hidden;
     height: 180px;
+    padding-top: 40px;
 }
 .container-frames {
     list-style-type: none;
@@ -266,10 +267,7 @@ video {
 
 .meme-image {
     display: block;
-    height: 300px;
-    background-repeat: no-repeat;
-    background-position: top left;
-    background-size: cover;
+    width: 100%;
     background-color: #333;
 }
 
