--- a/views/meme-list.jade
+++ b/views/meme-list.jade
@@ -2,5 +2,6 @@
 
 ul#container-memes
     li(ng-repeat="meme in memes")
-        a.meme-image(style='background-image:url({{meme.MemeUrl}})', href='/memes/{{meme._id}}')
+        a(href='/memes/{{meme._id}}')
+            img.meme-image(src='{{meme.MemeUrl}}')
         
