--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,6 +3,7 @@ html(ng-app='hypeApp')
   head
     base(href="/")
     title= Hype
+    meta(content="width=device-width,minimum-scale=1.0", name="viewport")
     link(href='/favicon.ico', rel='icon', type='image/x-icon')
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='/stylesheets/doodle.css')
